Update Jenkinsfile added docker stage in the cicd

--- a/stagepipeline/Jenkinsfile
+++ b/stagepipeline/Jenkinsfile
@@ -22,6 +22,9 @@ pipeline {
 	SONARSERVER = 'sonarserver'
 	SONARSCANNER = 'sonarscanner'
         ARTVERSION = "${env.BUILD_ID}"
+	registryCredential = "ecr:us-west-1:awscreds"
+	appRegistry = "503129199420.dkr.ecr.us-west-1.amazonaws.com/vprofileapp"
+	profileRegistry = "https://503129199420.dkr.ecr.us-west-1.amazonaws.com"
     }
 	
     stages{
@@ -101,7 +104,23 @@ pipeline {
             }
         }
 		  
-
+        stage('Build App Image') {
+            steps {
+                script {
+                    dockerImage = docker.build( appRegistry + ":$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                }
+            }
+        }
+        
+        stage('Upload App Image') {
+          steps{
+            script {
+              docker.withRegistry( vprofileRegistry, registryCredential ) {
+                dockerImage.push("$BUILD_NUMBER")
+                dockerImage.push('latest')
+              }
+            }
+          }
 
     }
     post {
