--- a/stagepipeline/Jenkinsfile
+++ b/stagepipeline/Jenkinsfile
@@ -15,13 +15,18 @@ pipeline {
         NEXUS_VERSION = "nexus3"
         NEXUS_PROTOCOL = "http"
         NEXUS_IP = "172.31.3.51"
-	NEXUS_PORT = "8081"
+	    NEXUS_PORT = "8081"
         NEXUS_REPOSITORY = "vprofile-release"
-	NEXUS_REPO_ID    = "vprofile-release"
+	    NEXUS_REPO_ID    = "vprofile-release"
         NEXUS_LOGIN = "nexuslogin"
-	SONARSERVER = 'sonarserver'
-	SONARSCANNER = 'sonarscanner'
+	    SONARSERVER = 'sonarserver'
+	    SONARSCANNER = 'sonarscanner'
         ARTVERSION = "${env.BUILD_ID}"
+        registryCredential = "ecr:us-west-1:awscreds"
+	    appRegistry = "503129199420.dkr.ecr.us-west-1.amazonaws.com/vprofileapp"
+	    vprofileRegistry = "https://503129199420.dkr.ecr.us-west-1.amazonaws.com"
+	    cluster = "vprofilestaging"
+	    service = "vproappstageservice"
     }
 	
     stages{
@@ -101,7 +106,31 @@ pipeline {
             }
         }
 		  
-
+        stage('Build App Image') {
+            steps {
+                script {
+                    dockerImage = docker.build( appRegistry + ":$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                }
+            }
+        }
+        
+        stage('Upload App Image') {
+          steps{
+            script {
+              docker.withRegistry( vprofileRegistry, registryCredential ) {
+                dockerImage.push("$BUILD_NUMBER")
+                dockerImage.push('latest')
+              }
+            }
+          }
+	}
+	stage('Deploy to ECS Staging') {
+	    steps {
+	       withAWS(credentials: 'awscreds', region: 'us-west-1') {
+		   sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
+	       }
+	    }
+	}
 
     }
     post {
